--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "window.autoDetectColorScheme": false,
     "window.closeWhenEmpty": false,
-    "workbench.colorTheme": "Monokai"
+    "workbench.colorTheme": "Monokai",
+    "liveServer.settings.port": 5501
 }
